<resources>
  <string name="app_name">BilliardRecord</string>
  <string name="title_activity_main">MainActivity</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="str_show_record">기록 보기</string>
  <string name="str_start_game">경기 시작</string>
  <string name="str_end_inning">이닝 종료</string>
  <string name="str_end_game">경기 종료</string>
  <string name="str_inning">INNING</string>
  <string name="str_avg">AVG</string>
  <string name="str_no_score">공타</string>
  <string name="str_highrun">하이런</string>
  <string name="str_foul">파울</string>
  <string name="str_add_score">+</string>
  <string name="str_sub_score">-</string>
</resources>
